button safari fixed

--- a/src/scss/_base.scss
+++ b/src/scss/_base.scss
@@ -42,6 +42,7 @@ p {
 button {
   border: none;
   background-color: transparent;
+  -webkit-appearance: none;
 }
 
 button:hover {
